# TrackLive

./: README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: api.py  detector.py  main.py  tracker.py  video_handler.py
backend/src/utils/: config.py  drawing.py
